[tool.poetry]
name = "pim-item-analysis"
version = "0.1.0"
description = "Helps speed up PIM item analysis"
authors = ["George Murgă <george.murga+github@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.2"
xlsxwriter = "^3.2.0"
rich = "^13.7.1"
types-openpyxl = "^3.1.0.20240425"
ibis-framework = { extras = ["pandas", "sqlite"], version = "^8.0.0" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.4"
pytest = "^8.1.1"

[tool.poetry.scripts]
pia = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.format]
max-line-length = 120

[tool.ruff.lint.isort]
force-single-line = true

[tool.isort]
force_single_line = true

[tool.black]
line-length = 120

[tool.pycodestyle]
line-length = 120

[tool.basedpyright]
reportImplicitStringConcatenation = false

[tool.pyright]
reportImplicitStringConcatenation = false
